Modified Basic Display

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype
 html
     head
         block title
-            title Blog of Christopher Vachon
+            title Node Site of Christopher Vachon
         link(rel="stylesheet", href='/includes/css/cmv-express.min.css')
         meta(name="viewport",content="width=device-width, initial-scale=1")
     body
