--- a/public/admin/templates/pages/users/edit.html
+++ b/public/admin/templates/pages/users/edit.html
@@ -17,6 +17,16 @@
         <label for="password">Password</label>
         <input type="password" class='form-control' name="password" ng-model="user.password" />
     </div>
+    <div class="row">
+        <div class="form-group col-sm-6">
+            <label for="isAdmin">Is Admin</label>
+            <select class='form-control' ng-model="user.isAdmin" ng-options="option.value as option.label for option in options"></select>
+        </div>
+        <div class="form-group col-sm-6">
+            <label for="canPost">Is Editor</label>
+            <select class='form-control' ng-model="user.canPost" ng-options="option.value as option.label for option in options"></select>
+        </div>
+    </div>
 
     <button class="btn btn-primary btn-lg" ng-click="saveUser(user)" ng-disabled="updating">{{updating ? 'Saving...' : 'Save'}}</button>
 </form>
