--- a/public/admin/templates/pages/projects/index.html
+++ b/public/admin/templates/pages/projects/index.html
@@ -3,12 +3,13 @@
     <thead>
         <tr>
             <th>Project Name</th>
+            <th>Category</th>
             <th></th>
         </tr>
     </thead>
     <tfoot>
         <tr>
-            <th colspan="2">
+            <th colspan="3">
                 <a ng-href="#/projects/new" class="btn btn-success">New</a>
             </th>
         </tr>
@@ -16,6 +17,7 @@
     <tbody>
         <tr ng-repeat="project in projects">
             <td>{{project.title}}</td>
+            <td>{{project.category}}</td>
             <td>
                 <div class="btn-toolbar pull-right">
                     <div class='btn-group'>
