--- a/public/admin/css/admin.css
+++ b/public/admin/css/admin.css
@@ -10,3 +10,23 @@ body {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+
+th.sortable {
+    cursor: pointer;
+}
+
+th.sortable.active {
+    background-color: #eee;
+}
+
+.label {
+    margin-right: 0.5em;
+}
+
+.label:last-of-type {
+    margin-right: 0;
+}
+
+.clickable {
+    cursor: pointer;
+}
