Added Basic Front-Side Pages for About and Projects

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-    h1 Christopher Vachon's Node Site
+    h1 Christopher Vachon's Homepage
     h2 Coming Soon!
+
+    
