--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,3 +8,9 @@ html
     body
         block content
             h1 Oops! No content...
+            
+        footer
+            ul
+                li: a(href="/") Home
+                li: a(href="/about-me") About Me
+                li: a(href="/projects") Projects
