--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,5 +12,6 @@ html
         footer
             ul
                 li: a(href="/") Home
+                li: a(href="/blog") Blog
                 li: a(href="/about-me") About Me
                 li: a(href="/projects") Projects
