Update Page Layouts

--- a/views/about.jade
+++ b/views/about.jade
@@ -2,18 +2,46 @@ extends layout
 
 block content
     h1 About Me
-    p Hi, My name is Christopher Vachon, and in case you have missed it on my site, I am a Web Developer, Musician, and a Beer Enthusiast. I work in Midland Ontario, Canada as a Senior Application Developer for a medium sized firm.
+    p.
+        Hi, My name is Christopher Vachon, and in case you have missed it on my 
+        site, I am a Web Developer, Musician, and a Beer Enthusiast. I work in 
+        Midland Ontario, Canada as a Senior Application Developer for a medium 
+        sized firm.
     
     h2 Web Developer
-    p Web development has been a bit of passion of mine for the majority of my adult life.
-    p I started off in the late 1990's by creating static webpages in HTML using a service called AngelFire. From there I went to college where I learned to program in PERL and PHP using MySQL databases and flat files. I eventually learned to create webpage templating systems in PHP and to use the archaic javascript and css available at the time.
-    p I then took a job with a company where I needed to learn T-SQL as well as ColdFusion. It was at that point where CSS2 really started to become supported by the major browsers, and jQuery came on the scene shortly after that.
-    p These days I focus on jQuery Plugins, LESS, and developing on a ColdFusion framework called FW1.
+    p.
+        Web development has been a bit of passion of mine for the majority of 
+        my adult life.
+    p.
+        I started off in the late 1990's by creating static webpages in HTML 
+        using a service called AngelFire. From there I went to college where I 
+        learned to program in PERL and PHP using MySQL databases and flat 
+        files. I eventually learned to create webpage templating systems in PHP
+        and to use the archaic javascript and css available at the time.
+    p.
+        I then took a job with a company where I needed to learn T-SQL as well 
+        as ColdFusion. It was at that point where CSS2 really started to become 
+        supported by the major browsers, and jQuery came on the scene shortly 
+        after that.
+    p.
+        These days I focus on jQuery Plugins, LESS, and developing on a 
+        ColdFusion framework called FW1.
     
     h2 Musician
-    p From a child I have always been fascinated with music and musical instruments, so I was fortunate that we always had a guitar lying around where ever we went. But it was not until my mid twenties that I started to take music seriously. I obtained an acoustic guitar and began to learn as much as I could.
-    p Later, a good friend of mine loaned me a bass guitar, and I took to that almost instantly. I very quickly purchased my own bass guitar and amp to practice with and perform with. From there, we started a band with a few local guys called Fine Alley.
-    p I quickly expanded the collection with an electronic double bass, and most recently added an acoustic bass to the mix.
+    p.
+        From a child I have always been fascinated with music and musical 
+        instruments, so I was fortunate that we always had a guitar lying 
+        around where ever we went. But it was not until my mid twenties that I 
+        started to take music seriously. I obtained an acoustic guitar and began 
+        to learn as much as I could.
+    p.
+        Later, a good friend of mine loaned me a bass guitar, and I took to that 
+        almost instantly. I very quickly purchased my own bass guitar and amp to 
+        practice with and perform with. From there, we started a band with a few 
+        local guys called Fine Alley.
+    p.
+        I quickly expanded the collection with an electronic double bass, and 
+        most recently added an acoustic bass to the mix.
     
     h2 Beer Enthusiast
     p I like Beer... what more is there to say?
