--- a/views/blogView.jade
+++ b/views/blogView.jade
@@ -4,4 +4,9 @@ block content
     article
         header
             h1!= post.title
+            p.meta Posted: !{ utl.prettyDate(post.publish_date,"mmmm d, yyyy") }
         div!= postBody
+        if post.tags
+            aside
+                for tag in post.tags
+                    span.label.label-info!= tag
