--- a/src/less/bootstrap.less
+++ b/src/less/bootstrap.less
@@ -97,8 +97,11 @@
     article {
         header {
             .meta {
-                font-size: 0.8em;
+                font-size: 0.7em;
+                color: #999;
             }
+            border-bottom: 1px #999 solid;
+            margin-bottom: 1em;
         }
         .label {
             margin-right: 0.5em;
@@ -106,6 +109,9 @@
     }
     .article-list {
         article {
+            header {
+                border-bottom: none;
+            }
             border-bottom: 1px #999 solid;
             margin-top: 1em;
             margin-bottom: 1em;
