--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,7 +34,7 @@ html
             .row
                 header.masthead.col-sm-3.col-xs-12
                     .brand.col-xs-3.col-xs-push-9.col-sm-12.col-sm-push-0
-                        img(src='/includes/imgs/me2-300.jpg', alt='Picture of Christopher Vachon').img-responsive
+                        a(href="/"): img(src='/includes/imgs/me2-300.jpg', alt='Picture of Christopher Vachon').img-responsive
                     .desc.col-xs-9.col-xs-pull-3.col-sm-12.col-sm-pull-0
                         p.lead Christopher Vachon
                         p.sub Web Developer, Musician, and Beer Enthusiast
