--- a/public/admin/templates/pages/articles/index.html
+++ b/public/admin/templates/pages/articles/index.html
@@ -12,11 +12,11 @@
         <tr>
             <th colspan="4">
 
-                <nav class='pull-right'>
+                <nav class='pull-right' ng-show="numberOfPages() > 1">
                     <ul class="pager">
-                        <li ng-class="{disabled: pageNo <= 1}"><a ng-click="pageNo=pageNo-1">Previous</a></li>
+                        <li ng-class="{disabled: pageNo <= 1}"><a href="" ng-click="prevPage()">Previous</a></li>
                         <li>{{pageNo}} / {{numberOfPages()}}</li>
-                        <li ng-class="{disabled: pageNo >= numberOfPages()}"><a ng-click="pageNo=pageNo+1">Next</a></li>
+                        <li ng-class="{disabled: pageNo >= numberOfPages()}"><a href="" ng-click="nextPage()">Next</a></li>
                     </ul>
                 </nav>
 
