Update About Me

--- a/views/about.jade
+++ b/views/about.jade
@@ -14,18 +14,16 @@ block content
         my adult life.
     p.
         I started off in the late 1990's by creating static webpages in HTML 
-        using a service called AngelFire. From there I went to college where I 
-        learned to program in PERL and PHP using MySQL databases and flat 
+        using an online service called AngelFire. From there I went to college 
+        where I learned to program in PERL and PHP using MySQL databases and flat 
         files. I eventually learned to create webpage templating systems in PHP
-        and to use the archaic javascript and css available at the time.
+        and to use the archaic javascript and css technologies available at the time.
     p.
         I then took a job with a company where I needed to learn T-SQL as well 
         as ColdFusion. It was at that point where CSS2 really started to become 
         supported by the major browsers, and jQuery came on the scene shortly 
-        after that.
-    p.
-        These days I focus on jQuery Plugins, LESS, and developing on a 
-        ColdFusion framework called FW1.
+        after that. From that I moved from FuseBox framework into FW1, and have
+        begun to transition towards moving everything into Node.js.
     
     h2 Musician
     p.
@@ -45,5 +43,3 @@ block content
     
     h2 Beer Enthusiast
     p I like Beer... what more is there to say?
-    p The Goal of this Website
-    p This post outlines my goals for this site and what I want it to be.
