--- a/src/css/christophervachon-node.css
+++ b/src/css/christophervachon-node.css
@@ -3612,6 +3612,23 @@ article .label {
   border-bottom: none;
   padding-bottom: 0;
 }
+.activityItem {
+  border-bottom: 1px #999 solid;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+.activityItem h2 {
+  margin-top: 0;
+}
+.activityItem:last-of-type {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+.activityItem .sub {
+  font-size: 0.8em;
+}
 @media (max-width: 767px) {
   .masthead {
     background-color: #eeeeee;
