--- a/views/layout.jade
+++ b/views/layout.jade
@@ -64,3 +64,5 @@ html
                     p <strong>Discliamer</strong>: the views and opinions expressed on this site a solely my own and do not nessacarily reflect those of any person, company, or organization mentioned on this site.
         each jsPath in settings.jsFiles
             script(src=jsPath)
+        
+        script(src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55662a7d2a510903", async)
