--- a/src/less/articles.less
+++ b/src/less/articles.less
@@ -7,6 +7,16 @@ article {
         border-bottom: 1px #999 solid;
         margin-bottom: 1em;
     }
+    .addthis_sharing_toolbox {
+        margin: 1em;
+        width: 40px;
+        padding-left: 1em;
+        border-left: 1px #999 dashed;
+        float: right;
+    }
+    .article-body {
+        margin-right: 85px;
+    }
     .label {
         margin-right: 0.5em;
     }
