--- a/src/less/articles.less
+++ b/src/less/articles.less
@@ -8,7 +8,7 @@ article {
         margin-bottom: 1em;
     }
     .addthis_sharing_toolbox {
-        margin: 1em;
+        margin: 0 1em 1em 1em;
         width: 40px;
         padding-left: 1em;
         border-left: 1px #999 dashed;
